@@ -129,7 +129,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 0, 9, "final", 0)
-__version_time__ = "22 Apr 2022 12:22 UTC"
+__version_time__ = "30 Apr 2022 15:36 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
